data/derived/sp14/progs/unify/prog3122.ml.out
Characters 35-51:
  let notequals x y = if x <> y then (notequals,true);;
                                     ^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type unit
